--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,10 @@
         android:theme="@style/Theme.Calc"
         tools:targetApi="31">
         <activity
+            android:name=".GraphActivity"
+            android:exported="false"
+            android:parentActivityName=".MainActivity" />
+        <activity
             android:name=".CalcActivity"
             android:exported="false"
             android:parentActivityName=".MainActivity" />
@@ -22,7 +26,6 @@
         <activity
             android:name=".MainActivity"
             android:exported="true">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
